
* Verilator 4.017 devel

**    When showing an error, show source code and offer suggestions of replacements.

**    When showing an error, show the instance location, bug1305. [Todd Strader]

***   Add --rr, bug1481. [Todd Strader]

***   Change MULTITOP to warning to help linting, see manual.

****  Show included-from filenames in warnings, bug1439. [Todd Strader]

****  Fix not reporting some duplicate signals/ports, bug1462. [Peter Gerst]

****  Fix not in array context on non-power-of-two slices, msg2946. [Yu Sheng Lin]

****  Fix system compile flags injection. [Gianfranco Costamagna]

****  Fix enum values not being sized based on parent, bug1442. [Dan Petrisko]

****  Fix internal error on gate optimization of assign, bug1475. [Oyvind Harboe]


* Verilator 4.016 2019-06-16

***   Add --quiet-exit, bug1436. [Todd Strader]

****  Error continuation lines no longer have %Error prefix.

****  Support logical equivalence operator <->.

****  Support VerilatedFstC set_time_unit, bug1433. [Pieter Kapsenberg]

****  Support deferred assertions, bug1449. [Charles Eddleston]

****  Mark infrequently called functions with GCC cold attribute.

****  Fix sign-compare warning in verilated.cpp, bug1437. [Sergey Kvachonok]

****  Fix fault on $realtime with %t, bug1443. [Julien Margetts]

****  Fix $display with string without %s, bug1441. [Denis Rystsov]

****  Fix parameter function string returns, bug1441. [Denis Rystsov]

****  Fix invalid XML output due to special chars, bug1444. [Kanad Kanhere]

****  Fix performance when mulithreaded on 1 CPU, bug1455. [Stefan Wallentowitz]

****  Fix type and real parameter issues, bug1427, bug1456, bug1458. [Todd Strader]

****  Fix build error on MinGW, bug1460. [Richard Myers]

****  Fix not reporting some duplicate signals, bug1462. [Peter Gerst]

****  Fix --savable invalid C++ on packed arrays, bug1465. [Alex Chadwick]

****  Fix constant function return of function var, bug1467. [Roman Popov]


* Verilator 4.014 2019-05-08
